# hfst3

./: AUTHORS  ChangeLog  ChangeLog.old  Doxyfile  HACKING  Makefile.am  NEWS  README  README-alpha  README.deps  THANKS  api_documentation.dox  autogen.sh  configure.ac
back-ends/foma/: Makefile.am  apply.c  constructions.c  determinize.c  flags.c  fomalib.h  fomalibconf.h  iface.c  io.c  lex.cmatrix.c  lex.interface.c  lex.lexc.c  lex.yy.c  lexc.l  lexcread.c  minimize.c  regex.l  regex.tab.c  regex.tab.h  regex.y  rewrite.c  sigma.c  spelling.c  structures.c
libhfst/: Makefile.am  configure.ac  hfst.pc.in
libhfst/src/: ExtractStrings.h  FlagDiacritics.cc  FlagDiacritics.h  FormatSpecifiers.h  HarmonizeUnknownAndIdentitySymbols.cc  HarmonizeUnknownAndIdentitySymbols.h  HfstAlphabet.cc  HfstAlphabet.h  HfstApply.cc  HfstBasic.cc  HfstBasic.h  HfstCompiler.cc  HfstCompiler.h  HfstDataTypes.cc  HfstDataTypes.h  HfstEpsilonHandler.cc  HfstExceptionDefs.cc  HfstExceptionDefs.h  HfstExceptions.cc  HfstExceptions.h  HfstExtractStrings.h  HfstFlagDiacritics.cc  HfstFlagDiacritics.h  HfstGrammar.cc  HfstGrammar.h  HfstInputStream.cc  HfstInputStream.h  HfstLookupFlagDiacritics.cc  HfstMutableTransducer.h  HfstOutputStream.cc  HfstOutputStream.h  HfstPrintDot.cc  HfstPrintDot.h  HfstPrintPCKimmo.cc  HfstPrintPCKimmo.h  HfstRules.cc  HfstStrings2FstTokenizer.cc  HfstSymbolDefs.cc  HfstSymbolDefs.h  HfstTokenizer.cc  (+16 more)
libhfst/src/extensions/: LexcCompiler.cc  LexcCompiler.h  Makefile.am  XfstCompiler.cc  XfstCompiler.h  XreCompiler.cc  XreCompiler.h  lexc-parser.yy  lexc-utils.h  xre_parse.yy  xre_utils.cc  xre_utils.h
libhfst/src/implementations/: BooleanWeightTransducer.cc  BooleanWeightTransducer.h  ConvertBooleanWeightTransducer.cc  ConvertFomaTransducer.cc  ConvertLogWeightTransducer.cc  ConvertOlTransducer.cc  ConvertSfstTransducer.cc  ConvertTransducerFormat.cc  ConvertTransducerFormat.h  ConvertTropicalWeightTransducer.cc  ConvertXfsmTransducer.cc  ExtractStrings.h  FlagDiacritics.cc  FlagDiacritics.h  FomaTransducer.cc  FomaTransducer.h  FooTransducer.h  GlobalSymbolTable.cc  GlobalSymbolTable.h  HfstAlphabet.cc  HfstAlphabet.h  HfstConstantTransducer.cc  HfstConstantTransducer.h  HfstConversionTransducer.cc  HfstConversionTransducer.h  HfstExceptions.h  HfstFastTransitionData.h  HfstInternalTransducer.cc  HfstInternalTransducer.h  HfstNet.cc  HfstNet.h  HfstOlTransducer.cc  HfstOlTransducer.h  HfstTokenizer.cc  HfstTokenizer.h  HfstTransition.h  HfstTransitionGraph.cc  HfstTransitionGraph.h  HfstTropicalTransducerTransitionData.cc  HfstTropicalTransducerTransitionData.h  (+39 more)
libhfst/src/parsers/: LexcCompiler.cc  LexcCompiler.h  Makefile.am  PmatchCompiler.cc  PmatchCompiler.h  XfstCompiler.cc  XfstCompiler.h  XreCompiler.cc  XreCompiler.h  XreCompiler.reentrant.cc  XreCompiler.reentrant.h  lexc-lexer.ll  lexc-parser.yy  lexc-utils.cc  lexc-utils.h  pmatch_lex.ll  pmatch_parse.yy  pmatch_utils.cc  pmatch_utils.h  xfst-lexer.ll  xfst-parser.yy  xfst-utils.cc  xfst-utils.h  (+11 more)
man/: Makefile.am  hfst-apertium-proc.1  hfst-calculate.1  hfst-compare.1  hfst-compose-intersect.1  hfst-compose.1  hfst-concatenate.1  hfst-conjunct.1  hfst-determinize.1  hfst-diff-test.1  hfst-disjunct.1  hfst-foma-wrapper.1  hfst-format.1  hfst-fst2fst.1  hfst-fst2pairstrings.1  hfst-fst2strings.1  hfst-fst2txt.1  hfst-head.1  hfst-intersect.1  hfst-invert.1  hfst-lexc-compiler.1  hfst-lexc-wrapper.1  hfst-lexc.1  hfst-lookup.1  hfst-minimize.1  hfst-name.1  hfst-pair-test.1  hfst-proc.1  hfst-proc2.1  hfst-project.1  hfst-push-weights.1  hfst-regexp2fst.1  hfst-remove-epsilons.1  hfst-repeat.1  hfst-reverse.1  hfst-split.1  hfst-strings2fst.1  hfst-substitute.1  hfst-subtract.1  hfst-summarize.1  (+7 more)
test/libhfst/: Makefile.am  auxiliary_functions.cc  foobar.att  test.cc  test_constructors.cc  test_examples.cc  test_flag_diacritics.cc  test_hfst_basic_transducer.cc  test_lexc.cc  test_rules.cc  test_streams.cc  test_tokenizer.cc  test_transducer.att  test_transducer_functions.cc  test_transducers.att  transducer.att
test/tools/: 2to4cats.txt  Makefile.am  at_file_quote.foma.xre  at_file_quote.openfst-tropical.xre  at_file_quote.sfst.xre  basic.multi-file-1.lexc  basic.multi-file-2.lexc  basic.multi-file-3.lexc  basic.reserved-words-lowercase.lexc  basic.reserved-words-lowercase.lexc.result  basic.zeros-epsilons.lexc.flag.result  calculate-functionality.sh  cat.lexc  cat2dog.substitute  check-flag-results.sh  compare-functionality.sh  compose-functionality.sh  compose-intersect-functionality.sh  concatenate-functionality.sh  conjunct-functionality.sh  create-flag-results.sh  determinize-functionality.sh  disjunct-functionality.sh  empty-input.sh  format-functionality.sh  fst2strings-functionality.sh  fst2txt-functionality.sh  head-functionality.sh  hfst-check-environment.sh  hfst-check-help.sh  hfst-check-version.sh  hfst.weights.lexc.flag.result  hfst.weights.lexc.result  incompatible-formats-compare.sh  incompatible-formats.sh  invert-functionality.sh  latin-1-strings.sh  lexc-compiler-functionality.sh  lexc-functionality.sh  lexc2fst-stress.sh  (+39 more)
tools/: Makefile.am  configure.ac
tools/src/: FunctionalTransducer.cc  HfstAlphabet.cc  HfstAlphabet.h  HfstBasic.h  HfstCompiler.cc  HfstCompiler.h  HfstEpsilonHandler.h  HfstLookupFlagDiacritics.cc  HfstLookupFlagDiacritics.h  HfstStrings2FstTokenizer.cc  HfstStrings2FstTokenizer.h  HfstUtf8.cc  LexcCompiler.cc  LexcCompiler.h  Makefile.am  calculate_functions.h  generate_model_forms.cc  generate_model_forms.h  getopt_long.cc  getopt_long.h  guessify_fst.cc  hfst-affix-guessify.cc  hfst-apertium2fst.cc  hfst-binary-tool.cc  hfst-commandline.cc  hfst-commandline.h  hfst-common-cases.h  hfst-common-options.h  hfst-common-unary-cases.h  hfst-common-unary-options.h  hfst-common-unary-variables.h  hfst-compare.cc  hfst-compiler.yy  hfst-compose-intersect.cc  hfst-compose.cc  hfst-concatenate.cc  hfst-conjunct.cc  hfst-determinize.cc  hfst-diff-test.cc  hfst-disjunct.cc  (+70 more)
windows/foma/: Makefile.am  README  fomalib.h  io.c  lex.lexc.c  lex.yy.c  regex.tab.c
(+935 files in other folders)
